wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    component: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      component: wordpress
  strategy:
      type: RollingUpdate
  template:
    metadata:
      labels:
        component: wordpress
    spec:
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          ports:
          - containerPort: 8080
            name: wordpress
