loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-lb
spec:
  type: LoadBalancer
  selector:
    component: wordpress
  ports:
    - port: 80
      targetPort: 80
