wordpress-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-cluster-ip-service
  labels:
    load: wordpress-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: wordpress
  ports:
    - port: 80
