wordpress-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    component: wordpress
